--- a/src/assets/styles/Sidebar.css
+++ b/src/assets/styles/Sidebar.css
@@ -1,3 +1,16 @@
 .sidebar{
     background-color: #FFBD15;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+}
+
+.btn-group-vertical {
+    width: 500%;
+}
+
+.btn-signout {
+    display: block;
+   align-self: flex-end;
 }
