--- a/src/assets/styles/DataProject.css
+++ b/src/assets/styles/DataProject.css
@@ -1,7 +1,42 @@
 .table-data-project {
-    width: 80%;
-} 
+  width: 80%;
+}
+
+.table-container {
+  max-height: 100px;
+  overflow-y: auto;
+  display: block;
+}
+
+.table-container table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+}
+
+.sticky-header th {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  /* Optional: add border-bottom for separation */
+  border-bottom: 2px solid #000000;
+}
 
 .sidebar {
-    width: 20%;
+  width: 20%;
+}
+
+.submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+table th {
+  text-align: center; /* Horizontal center */
+  vertical-align: middle; /* Vertical center */
+}
+
+td {
+  vertical-align: middle;
 }
