--- a/src/assets/styles/DataUser.css
+++ b/src/assets/styles/DataUser.css
@@ -1,7 +1,30 @@
 .table-data-user {
-    width: 80%;
-} 
+  width: 80%;
+}
 
 .sidebar {
-    width: 20%;
+  width: 20%;
+}
+
+table th {
+  text-align: center; /* Horizontal center */
+  vertical-align: middle; /* Vertical center */
+}
+
+td {
+  vertical-align: middle;
+}
+
+.table-container {
+  max-height: 50px;
+  overflow-y: auto;
+  /* border: 1px solid #ddd; */
+}
+
+.sticky-header th {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  /* Optional: add border-bottom for separation */
+  border-bottom: 2px solid #000000;
 }
